# deepgis_vision

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
config/: ai_vision.yaml  coral_perception.yaml  grounding_dino.yaml
launch/: ai_vision.launch.py  coral_perception.launch.py  grasshopper_stereo_vision.launch.py  grounding_dino.launch.py
msg/: AIServerStatus.msg  Detection.msg  DetectionArray.msg
scripts/: ai_vision_node.py  coral_model_benchmark.py  detection_visualizer.py  grounding_dino_node.py
srv/: DetectObjects.srv  SetPrompt.srv
